# raweceek

./: LICENSE  README.md  pyproject.toml
raweceek/: cldr.py  main.py  telegram.py
